--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,9 @@
     "no-shadow": "off",
     "no-param-reassign": "off",
     "eol-last": "off",
-    "arrow-parens": "off"
+    "arrow-parens": "off",
+    "no-unused-expressions": "off",
+    "no-plusplus": "off"
   },
   "ignorePatterns": [
     "dist/",
